--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
     "@babel/node": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "nodemon": "^2.0.14"
+  },
+  "dependencies": {
+    "@graphql-tools/schema": "^8.3.1",
+    "apollo-server-express": "^3.4.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "graphql": "^15.7.1"
   }
 }
