--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.7.1"
+  },
+  "scripts": {
+    "dev": "nodemon ./index.js --exec babel-node"
   }
 }
