--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@graphql-tools/schema": "^8.3.1",
+    "apollo-server-core": "^3.4.0",
     "apollo-server-express": "^3.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
